app: fix width of GimpThumbBox' thumbnail generation progressbar
using CSS and GTK_ALIGN_FILL. The progress is currently not visible,
there is a bug in Adwaita that is about to be fixed upstream.

--- a/themes/System/gimp.css
+++ b/themes/System/gimp.css
@@ -133,6 +133,12 @@ GimpDisplayShell progressbar progress {
     min-height: 1em;
 }
 
+GimpFileDialog progressbar trough,
+GimpFileDialog progressbar progress {
+    min-width: 1px; /* hack */
+    min-height: 1em;
+}
+
 GimpRuler {
     font-size: smaller;
 }
